--- a/NMSShipIOTool/View/Form1.en.resx
+++ b/NMSShipIOTool/View/Form1.en.resx
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!--
-    Microsoft ResX Schema
-
+  <!-- 
+    Microsoft ResX Schema 
+    
     Version 2.0
-
-    The primary goals of this format is to allow a simple XML format
-    that is mostly human readable. The generation and parsing of the
-    various data types are done through the TypeConverter classes
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
     associated with the data types.
-
+    
     Example:
-
+    
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-
-    There are any number of "resheader" rows that contain simple
+                
+    There are any number of "resheader" rows that contain simple 
     name/value pairs.
-
-    Each data row contains a name, and value. The row also contains a
-    type or mimetype. Type corresponds to a .NET class that support
-    text/value conversion through the TypeConverter architecture.
-    Classes that don't support this are serialized and stored with the
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
     mimetype set.
-
-    The mimetype is used for serialized objects, and tells the
-    ResXResourceReader how to depersist the object. This is currently not
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
     extensible. For a given mimetype the value must be set accordingly:
-
-    Note - application/x-microsoft.net.object.binary.base64 is the format
-    that the ResXResourceWriter will generate, however the reader can
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
     read any of the formats listed below.
-
+    
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-
+    
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array
+    value   : The object must be serialized into a byte array 
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -117,91 +117,116 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="title.Font" type="System.Drawing.Font, System.Drawing">
-    <value>微软雅黑, 20pt, style=Bold</value>
+  <data name="labelPath.Text" xml:space="preserve">
+    <value>Save path:</value>
   </data>
-  <data name="title.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 0</value>
+  <data name="buttonSelect.Text" xml:space="preserve">
+    <value>Choose Path</value>
   </data>
-  <data name="title.Size" type="System.Drawing.Size, System.Drawing">
-    <value>600, 200</value>
+  <data name="buttonLoad.Text" xml:space="preserve">
+    <value>Load</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="title.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
+  <data name="tabPage1.Text" xml:space="preserve">
+    <value>Save</value>
   </data>
-  <data name="title.Text" xml:space="preserve">
-    <value>NMS Ship IO Tool
-无人深空飞船导入导出工具</value>
+  <data name="checkBoxTechI.Text" xml:space="preserve">
+    <value>Save Tech., Module as .tech</value>
   </data>
-  <data name="title.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
-    <value>MiddleCenter</value>
+  <data name="buttonImportShipTechI.Text" xml:space="preserve">
+    <value>Import Tech., Module</value>
   </data>
-  <data name="&gt;&gt;title.Name" xml:space="preserve">
-    <value>title</value>
+  <data name="buttonExportShipTechI.Text" xml:space="preserve">
+    <value>Export Tech., Module</value>
   </data>
-  <data name="&gt;&gt;title.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="pathTextE.Text" xml:space="preserve">
+    <value>Export file path:</value>
   </data>
-  <data name="&gt;&gt;title.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="nameTextE.Text" xml:space="preserve">
+    <value>Export file path:</value>
   </data>
-  <data name="&gt;&gt;title.ZOrder" xml:space="preserve">
-    <value>0</value>
+  <data name="exportSelect.Text" xml:space="preserve">
+    <value>Choose Path</value>
   </data>
-  <data name="info.Font" type="System.Drawing.Font, System.Drawing">
-    <value>微软雅黑, 10pt</value>
+  <data name="buttonExport.Text" xml:space="preserve">
+    <value>Export</value>
   </data>
-  <data name="info.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 200</value>
+  <data name="checkBoxNMSSHIP1.Text" xml:space="preserve">
+    <value>Use .nmsship</value>
   </data>
-  <data name="info.Size" type="System.Drawing.Size, System.Drawing">
-    <value>600, 200</value>
+  <data name="importSelect.Text" xml:space="preserve">
+    <value>Choose File</value>
   </data>
-  <data name="info.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
+  <data name="shipSelectI.Text" xml:space="preserve">
+    <value>Please select your Corvette:</value>
   </data>
-  <data name="info.Text" xml:space="preserve">
-    <value>版本 1.1.0
-作者：蓝夜深空（BNDS-tx）
-
-
-
-本工具仅供学习和交流使用。
-NMS Ship IO Tool  Copyright (C) 2025  徐腾（蓝夜深空）</value>
+  <data name="pathTextI.Text" xml:space="preserve">
+    <value>Import file path:</value>
   </data>
-  <data name="info.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
-    <value>TopCenter</value>
+  <data name="inputTextI.Text" xml:space="preserve">
+    <value>Or you can input Objects content mannually</value>
   </data>
-  <data name="&gt;&gt;info.Name" xml:space="preserve">
-    <value>info</value>
+  <data name="inputTextIExplanation.Text" xml:space="preserve">
+    <value>Please adhere to the JSON format</value>
   </data>
-  <data name="&gt;&gt;info.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="buttonImport.Text" xml:space="preserve">
+    <value>Import</value>
   </data>
-  <data name="&gt;&gt;info.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="checkBoxI.Text" xml:space="preserve">
+    <value>Use Obf.</value>
   </data>
-  <data name="&gt;&gt;info.ZOrder" xml:space="preserve">
-    <value>1</value>
+  <data name="tabPage2.Text" xml:space="preserve">
+    <value>Corvette</value>
   </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>7, 17</value>
+  <data name="checkBoxTech.Text" xml:space="preserve">
+    <value>Save Tech., Module as .tech</value>
   </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>600, 400</value>
+  <data name="buttonImportShipTech.Text" xml:space="preserve">
+    <value>Import Tech., Module</value>
+  </data>
+  <data name="buttonExportShipTech.Text" xml:space="preserve">
+    <value>Export Tech., Module</value>
+  </data>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Save file name:</value>
+  </data>
+  <data name="checkBoxNMSSHIP3.Text" xml:space="preserve">
+    <value>Use .nmsship</value>
+  </data>
+  <data name="checkBoxNewShip.Text" xml:space="preserve">
+    <value>Import as new ship</value>
+  </data>
+  <data name="seedShipIOText.Text" xml:space="preserve">
+    <value>Import/Export youe ship here:</value>
+  </data>
+  <data name="checkBoxSH0.Text" xml:space="preserve">
+    <value>Save as .sh0</value>
+  </data>
+  <data name="checkBoxS.Text" xml:space="preserve">
+    <value>Use Obf.</value>
+  </data>
+  <data name="buttonSeedShipExport.Text" xml:space="preserve">
+    <value>Export</value>
+  </data>
+  <data name="buttonSeedShipImport.Text" xml:space="preserve">
+    <value>Import</value>
+  </data>
+  <data name="seedSelectText.Text" xml:space="preserve">
+    <value>Please select your non-Corvette ship:</value>
+  </data>
+  <data name="buttonSetSeed.Text" xml:space="preserve">
+    <value>Set Seed</value>
+  </data>
+  <data name="tabPage3.Text" xml:space="preserve">
+    <value>Non-Corvette</value>
+  </data>
+  <data name="aboutButton.Text" xml:space="preserve">
+    <value>About</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>关于</value>
+    <value>NMS Ship IO Tool</value>
   </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>AboutDialog</value>
-  </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Form, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="&gt;&gt;$this.Name" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
   </data>
 </root>
